@@ -4,6 +4,7 @@ Cleaned up Bootstrapper class and added more to the hierarchy of classes that ge
 bootstrapped. These placeholder skeleton classes will be reloaded from source at a later
 point.
 I think the hierarchy is correct and I need to double check.
+Reimplemented primitive subclassing to use cleaned up Bootstrapper methods.
 
 
 21/01/2011 Changes
